# kicad-cse-loader

./: Cargo.toml  README.md  loader.toml
src/: main.rs
