[package]
name = "kicad-library-loader-linux"
version = "0.1.0"
authors = ["Karl Calden <kcalden323@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml="0.5"
serde = { version="1.0", features = ["derive"]}
regex = "1"